--- a/order.html
+++ b/order.html
@@ -32,8 +32,10 @@
          <label for="Would you like home pickup?(Extra cost):">Would you like home pickup?(Extra cost):</label>
          <input type="checkbox" name="tick" id="checkbox" ><br>
          <a href="">
-            <p class="success"> <?php echo $success;  ?></p>
+            <div>
+         <p class="success"> <?php echo $success;  ?></p>
          <p class="failed"> <?php echo $failed;  ?></p>
+      </div>
      <a href="">
      <button class="btn-3" name="submit" id="contact-submit" data-submit="....sending">Submit</button>
             <button class="btn-3">Submit</button>
