--- a/Feedback.html
+++ b/Feedback.html
@@ -21,11 +21,11 @@
      <input type="email" name="email" class="form-control" name="yourEmail" required placeholder="Email" tabindex="2" maxlength="50" autocapitalize="on"><br>
      <label for="">Feedback:</label><br>
      <textarea name="Feedback" class="form-control" id="feedback" cols="23" rows="5" required placeholder="Feedback" tabindex="3" maxlength="150" autocapitalize="on"></textarea><br>
-     <p class="success"> <?php echo $success;  ?></p>
+     <div>
+         <p class="success"> <?php echo $success;  ?></p>
          <p class="failed"> <?php echo $failed;  ?></p>
-     <a href="">
-     <button class="btn-3" name="submit" id="contact-submit" data-submit="....sending">Submit</button>
-    </a>     
+      </div>
+     <button class="btn-3" name="submit" id="contact-submit" data-submit="....sending">Submit</button> 
     </form>
 </div>
 <div class="bottom-container">
