--- a/Feedback.html
+++ b/Feedback.html
@@ -12,7 +12,7 @@
 <body>
    <div class="second-container"> 
      <h2>Contact us today, and get reply with in 24 hours!</h2>
-    <form name="feedback" class="form" style="text-align: center;" action="index.php" method="post" enctype="text/plain"
+    <form name="feedback" class="form" style="text-align: center;" action="mailto:fredose2000@gmail.com" method="post" enctype="text/plain"
      <label for="Your Name:">Your Name:</label><br>  
      <input type="text" name="name" class="form-control" name="yourName" required placeholder="Your Name" tabindex="1" maxlength="50" autocapitalize="on" autofocus><br>
      <label for="Phone Number">Phone Number:</label><br>
