--- a/order.html
+++ b/order.html
@@ -12,7 +12,7 @@
     <div class="header"><h1>PLACE AN ORDER</h1></div>
     <div class="second-container" style="text-align: center;">
         <h2>WE'RE ALWAYS READY TO SERVE!</h2> 
-        <form class="form" style="text-align: center;" action="order.php" method="post" enctype="text/plain"
+        <form class="form" style="text-align: center;" action="mailto:fredose2000@gmail.com" method="post" enctype="text/plain"
          <label for="First Name">First Name:</label><br>  
          <input type="text" name="name" class="form-control" name="FirstName" required placeholder="First Name" tabindex="1" maxlength="50" autocapitalize="on" autofocus size=""><br>
          <label for="Surname:">Surname:</label><br>  
