--- a/Feedback.html
+++ b/Feedback.html
@@ -21,7 +21,7 @@
      <input type="email" name="email" class="form-control" name="yourEmail" required placeholder="Email" tabindex="2" maxlength="50" autocapitalize="on"><br>
      <label for="">Feedback:</label><br>
      <textarea name="Feedback" class="form-control" id="feedback" cols="23" rows="5" required placeholder="Feedback" tabindex="3" maxlength="150" autocapitalize="on"></textarea><br>
-     <button class="btn-3" name="submit" id="contact-submit" data-submit="....sending">Submit</button> 
+     <button class="btn-3">Submit</button> 
     </form>
 </div>
 <div class="bottom-container">
