--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
     <a class="btn" href="Feedback.html">CONTACT US</a>
   </div>
   <hr>
-  <div class="bottom-container">
-    <img class="facebook" src="img\facebook.png" alt="facebook">
-    <a href="https://www.facebook.com/profile.php?id=100056869872049">Facebook</a>
-    <img class="facebook" src="img\phone-call.png" alt="Phone">
-    <a href="tel:09136213422">Phone</a>
-    <img class="facebook" src="img\whatsapp.png" alt="Whatsapp">
+  
+<div class="bottom-container">
+  <img class="facebook" src="img\facebook.png" alt="facebook">
+  <a href="https://www.facebook.com/empireelitedrycleaningservices/">Facebook</a>
+  <img class="facebook" src="img\phone-call.png" alt="Phone">
+  <a href="tel:09136213422">Phone</a>
+  <img class="facebook" src="img\whatsapp.png" alt="Whatsapp">
     <a href="https://wa.me/message/W54UOHNCLCOXJ1">Whatsapp</a>
-    <img class="facebook" src="img\email.png" alt="email">
-    <p class="closing">©2022 EmpireElite™.</p>
-  </div>
+  <p class="closing">©2022 EmpireElite™.</p>
+</div>
 </body>
 </html>
