--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <img class="home-delivery" src="img\fast-delivery.png" alt="home delivery">
   <p>Home delivery</p>
 </div>
-<a class="btn-2" href="order.html">PLACE AN ORDER</a>
+<a class="btn-2" href="order.html">BOOK APPOINTMENT</a>
   </div>
 <hr>
 <div class="fourth-container">
