--- a/order.html
+++ b/order.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Place An Order</title>
+    <title>Book An Appointment</title>
     <link rel="icon" type="image/x-icon" href="img\favicon\favicon.ico.png"> 
     <link rel="stylesheet" href="css/css/styles.css">
 </head>
 <body>
-    <div class="header"><h1>PLACE AN ORDER</h1></div>
+    <div class="header"><h1>BOOK AN APPOINTMENT</h1></div>
     <div class="second-container" style="text-align: center;">
         <h2>WE'RE ALWAYS READY TO SERVE!</h2> 
         <form class="form" style="text-align: center;" action="mailto:fredose2000@gmail.com" method="post" enctype="text/plain"
